--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -10,5 +10,8 @@ jobs:
     build:
         runs-on: windows-latest
         if: contains(github.event.head_commit.message, '[upcode]') == true)
+        steps:
+        - name: Checkout
+          uses: actions/checkout@v4
          
        
