--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -9,7 +9,7 @@ on:
 jobs:
     build:
         runs-on: windows-latest
-        if: "contains(github.event.head_commit.message, '[upcode]') == true)"
+        if: "contains(github.event.head_commit.message, 'upcode')"
         steps:
         - name: Checkout
           uses: actions/checkout@v4
